--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -43,7 +43,7 @@
             <h3>Conference Venue</h3>
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.909315946069!2d-122.41941568468174!3d37.7749297797591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808581e358d8c7f7%3A0x539dc1be78ab7c1f!2sSan%20Francisco%2C%20CA%2C%20USA!5e0!3m2!1sen!2sus!4v1610539821450!5m2!1sen!2sus"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
 
         <!-- Contact Us Form -->
