--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -29,7 +29,7 @@
         <!-- Contact Information Section -->
         <section>
             <h3>Our Contact Information</h3>
-            <p>Email: <a href="mailto:contact@techcon2024.com">contact@techcon2024.com</a></p>
+            <p>Email: <a href="mailto:contact@techcon2024.com">contact@techcon2024.com</a></p> <!-- Fixed mailto link -->
             <p>Follow us on social media:</p>
             <ul>
                 <li><a href="https://facebook.com/TechCon2024" target="_blank">Facebook</a></li>
